Fix ItemCard description horizontal overflow & allow titles to be more than one line

--- a/frontend/src/styles/shared/ItemCard.css
+++ b/frontend/src/styles/shared/ItemCard.css
@@ -37,3 +37,9 @@
   height: 65px;
   overflow:hidden;
 }
+
+.card-content {
+  height: 150px;
+  overflow-wrap: break-word;
+  overflow: hidden;
+}
